--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
 </head>
 <body>
     <div class="container">
-        <aside></aside>
+        <aside>
+            <div class="navigation">
+                <img class="main" src="./images/dashboard.svg" alt="dashboard">
+                <p class="title">Dashboard</p>
+            </div>
+
+            <div class="branding1">
+                <img src="./images/home.svg" alt="home">
+                <small>Home</small>
+                <img src="./images/profile.svg" alt="profile">
+                <small>Profile</small>
+                <img src="./images/message.svg" alt="messages">
+                <small>Messages</small>
+                <img src="./images/history.svg" alt="history">
+                <small>History</small>
+                <img src="./images/tasks.svg" alt="task">
+                <small>Tasks</small>
+                <img src="./images/communities.svg" alt="communities">
+                <small>Communities</small>
+            </div>
+
+            <div class="branding2">
+                <img src="./images/settings.svg" alt="settings">
+                <small>Settings</small>
+                <img src="./images/support.svg" alt="support">
+                <small>Support</small>
+                <img src="./images/privacy.svg" alt="privacy">
+                <small>Privacy</small>
+            </div>
+        </aside>
         <header></header>
         <main>
             <section class="one"></section>
