Main section finished

--- a/index.html
+++ b/index.html
@@ -40,8 +40,164 @@
         </aside>
         <header></header>
         <main>
-            <section class="one"></section>
-            <section class="two"></section>
+            <h4>Your Projects</h4>
+            <section class="one">
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Super Cool Project</p>
+                        <small>
+                            Sed tempus ut lacus ut scelerisque.
+                            Suspendisse sollicitudin nibh erat, id
+                            facilisis felis accumsan nec.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Less Cool Project</p>
+                        <small>
+                            Etiam cursus eros ac effictur fringilla.
+                            Vestibulum dignissim urna eget accumsan
+                            aliquam. Curabitur dignissim nisi in tortor
+                            commodo, ac bibendum magna tincidunt.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Impossible App</p>
+                        <small>
+                            Etiam cursus eros ac effictur fringilla.
+                            Vestibulum dignissim urna eget accumsan
+                            aliquam. Curabitur dignissim nisi in tortor
+                            commodo, ac bibendum magna tincidunt.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Easy Peasy App</p>
+                        <small>
+                            Sed tempus ut lacus ut scelerisque.
+                            Suspendisse sollicitudin nibh erat, id
+                            facilisis felis accumsan nec.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Ad Blocker</p>
+                        <small>
+                            Sed tempus ut lacus ut scelerisque.
+                            Suspendisse sollicitudin nibh erat, id
+                            facilisis felis accumsan nec.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+                <div class="box ">
+                    <div class="color"></div>
+                    <div class="text">
+                        <p>Money Maker</p>
+                        <small>
+                            Etiam cursus eros ac effictur fringilla.
+                            Vestibulum dignissim urna eget accumsan
+                            aliquam. Curabitur dignissim nisi in tortor
+                            commodo, ac bibendum magna tincidunt.
+                        </small>
+                    </div>
+                    <div class="img">
+                        <img src="./images/star.svg" alt="star">
+                        <img src="./images/eye.svg" alt="eye">
+                        <img src="./images/fork.svg" alt="fork">
+                    </div>
+                </div>
+            </section>
+            <section class="two">
+                <h4>Announcements</h4>
+                <div class="announcements">
+                    <p>Site Maintenance</p>
+                    <small>
+                        Nam vel lectus tincidunt, rutrum nulla
+                        eu, omare libero. Aliquam dictum
+                        accumsan portitor...
+                        <hr>
+                    </small>
+                    <p>Community Share Day</p>
+                    <small>
+                        Nam vel lectus tincidunt, rutrum nulla
+                        eu, omare libero. Aliquam dictum
+                        accumsan portitor...
+                        <hr>
+                    </small>
+                    <p>Update Privacy Policy</p>
+                    <small>
+                        Nam vel lectus tincidunt, rutrum nulla
+                        eu, omare libero. Aliquam dictum
+                        accumsan portitor...
+                    </small>
+                </div>
+                <h4>Trending</h4>
+                <div class="trending">
+                    <section class="user">
+                        <img src="./images/bat.svg" alt="bat">
+                        <div class="trentext">
+                            <p class="arr">@tegan</p>
+                            <small class="description">World Peace Builder</small>
+                        </div>
+                    </section>
+                    <section class="user">
+                        <img src="./images/grasshopper.svg" alt="grasshopper">
+                        <div class="trentext">
+                            <p class="arr">@morgan</p>
+                            <small class="description">Super Cool Project</small>
+                        </div>
+                    </section>
+                    <section class="user">
+                        <img src="./images/turtle.svg" alt="turtle">
+                        <div class="trentext">
+                            <p class="arr">@kendall</p>
+                            <small class="description">Life Changing App</small>
+                        </div>
+                    </section>
+                    <section class="user">
+                        <img src="./images/penguin.svg" alt="penguin">
+                        <div class="trentext">
+                            <p class="arr">@alex</p>
+                            <small class="description">No Traffic Maker</small>
+                        </div>
+                    </section>
+                </div>
+            </section>
         </main>
     </div>
 </body>
