--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
                 <img class="main" src="./images/dashboard.svg" alt="dashboard">
                 <p class="title">Dashboard</p>
             </div>
-
             <div class="branding1">
                 <img src="./images/home.svg" alt="home">
                 <small>Home</small>
@@ -28,7 +27,6 @@
                 <img src="./images/communities.svg" alt="communities">
                 <small>Communities</small>
             </div>
-
             <div class="branding2">
                 <img src="./images/settings.svg" alt="settings">
                 <small>Settings</small>
@@ -38,7 +36,33 @@
                 <small>Privacy</small>
             </div>
         </aside>
-        <header></header>
+        <header>
+            <div class="first-search">
+                <section class="first-input">
+                    <img class="svg" src="./images/search.svg" alt="search">
+                    <input type="search">
+                </section>
+                <section class="first-icon">
+                    <img class="svg" src="./images/bell.svg" alt="notifications">
+                    <img class="user" src="./images/grasshopper.svg" alt="profile picture">
+                    <p>Morgan Oakley</p>
+                </section>
+            </div>
+            <div class="second-profile">
+                <section class="user-data">
+                    <img class="profile" src="./images/grasshopper.svg" alt="Profile Picture">
+                    <div>
+                        <small>Hi there,</small>
+                        <h3>Morgan Oakley (@morgan)</h3>
+                    </div>
+                </section>
+                <section class="second-buttons">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </section>
+            </div>
+        </header>
         <main>
             <h4>Your Projects</h4>
             <section class="one">
